# ggazers

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: etl-ci.yaml  streams-ci.yaml
dags/: etl.py
etl/ingestion/: Dockerfile  pyproject.toml
etl/ingestion/src/: __init__.py  common.py  paths.py  processor.py  runner.py  utils.py
etl/ingestion/src/git_clients/: gh_archive_client.py  github_client.py
etl/ingestion/tests/: test_common.py  test_gh_archive_client.py  test_github_client.py  test_utils.py
etl/load/: pyproject.toml
etl/load/src/: analyzer.py  paths.py  processor.py  runner.py
etl/load/tests/: conftest.py  test_analyzer.py
etl/sql/ddl/: dim_actor.sql  dim_coding_session.sql  dim_repo.sql  fact_commit_comment_events.sql  fact_create_events.sql  fact_discussion_events.sql  fact_fork_events.sql  fact_gollum_events.sql  fact_issue_comment_events.sql  fact_issue_events.sql  fact_member_events.sql  fact_pull_request_events.sql  fact_pull_request_review_comment_events.sql  fact_push_events.sql  fact_release_events.sql  fact_watch_events.sql
etl/transformation/: pyproject.toml
etl/transformation/src/: paths.py  processor.py  runner.py  schema.py  transformer.py  utils.py
etl/transformation/tests/: __init__.py  conftest.py  test_processor.py  test_transformer.py  test_utils.py
infrastructure/: batch.docker-compose.yml  docker-compose.yml  init-multi-db.sh  init-superset-db.sh  streams.docker-compose.yml  visualization.docker-compose.yml
infrastructure/airflow/: Dockerfile  docker-compose.yml  requirements.txt
infrastructure/spark/: Dockerfile  docker-compose.yml  start-spark.sh
infrastructure/sql/init/: 02_create_user_level_stats.sql
infrastructure/superset/: superset_config.py
sql/dashboards/: live_repo_rank_last_window.sql  org_activity.sql  org_ggazer_rank_top_10.sql  org_last_period_activity.sql  repo_ggazer_rank_top_10.sql  repo_kpi_sum_commits.sql
sql/ddl/iceberg/: dim_actor.sql  dim_coding_session.sql  dim_repo.sql  fact_commit_comment_events.sql  fact_create_events.sql  fact_discussion_events.sql  fact_fork_events.sql  fact_gollum_events.sql  (+8 more)
stream-processing/analyzer/: .scalafmt.conf  Dockerfile  build.sbt
stream-processing/connect/: Dockerfile  constants.py  requirements.txt  runner.py
stream-processing/producer/: Dockerfile  pyproject.toml  requirements.txt
stream-processing/producer/src/: constants.py  github_client.py  processor.py  runner.py  schemas.py  utils.py
stream-processing/producer/src/mapper/: mapper.py
stream-processing/producer/src/producer/: kafka_producer.py
stream-processing/producer/tests/: test_mapper.py  test_utils.py
stream-processing/producer/tools/: inspect.py
stream-processing/tools/: inspect.py
(+48 files in other folders)
