[tool.poetry]
name = "ingestion"
version = "0.1.0"
description = ""
authors = ["Bojan Radovic <rbojan2000@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.3.0"
requests = "^2.32.5"
dotenv = "^0.9.9"
python-dotenv = "^1.2.1"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"